Add functionality to get original text of post back if it was translated

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -5,17 +5,17 @@
                 <img src="{{ post.author.avatar(70) }}">
             </a>
         </td>
-        <td>
+        <td id="post{{ post.id }}">
             {% set user_link %}
                 <a href="{{ url_for('user_page',  username=post.author.username) }}">
                     {{ post.author.username }}
                 </a>
             {% endset %}
             {{ _('%(username)s said %(when)s', username=user_link, when=moment(post.timestamp).fromNow()) }}
-            <p id="post{{ post.id }}">{{ post.body }}</p>
+            <p>{{ post.body }}</p>
         <!-- g.locale is language of user who sees the post -->
             {%  if post.language != g.locale %}
-                <a class="translation" id="translation{{ post.id }}" href="#">{{ _('Translate') }}</a>
+                <a class="translation"  href="#">{{ _('Translate') }}</a>
             {% endif %}
         </td>
     </tr>
