Start usting Blueprints

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     {% endfor %}
     <nav aria-label="...">
         <ul class="pager">
-            <li class="previous{% if not prev_url %} disbled{% endif %}">
+            <li class="previous{% if not prev_url %} disabled{% endif %}">
                 <a href="{{ prev_url or '#' }}">
                     <span aria-hidden="true">&larr;</span>{{ _('New posts') }}
                 </a>
