--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,13 +1,13 @@
 <table class="table table-hover">
     <tr>
         <td width="70px">
-            <a href="{{ url_for('user_page', username=post.author.username) }}">
+            <a href="{{ url_for('main.user_page', username=post.author.username) }}">
                 <img src="{{ post.author.avatar(70) }}">
             </a>
         </td>
         <td id="post{{ post.id }}">
             {% set user_link %}
-                <a href="{{ url_for('user_page',  username=post.author.username) }}">
+                <a href="{{ url_for('main.user_page',  username=post.author.username) }}">
                     {{ post.author.username }}
                 </a>
             {% endset %}
