--- a/app/templates/email/greeting_email_en.html
+++ b/app/templates/email/greeting_email_en.html
@@ -1,4 +1,4 @@
 <p>Thanks for signing up for Microblog, {{ user.username }}!</p>
 
 <p>Sincerely,</p>
-<p>The <a href="microblog.ayamikheev.ru">Microblog</a>Team</p>
+<p>The <a href="https://microblog.ayamikheev.ru/">Microblog</a> Team</p>
