--- a/app/templates/email/greeting_email_ru.html
+++ b/app/templates/email/greeting_email_ru.html
@@ -1,4 +1,4 @@
 <p>Спасибо, что зарегистрировались в Микроблоге, {{ user.username }}!</p>
 
 <p>С Уважением,</p>
-<p>Команда <a href="microblog.ayamikheev.ru">Микроблога</a></p>
+<p>Команда <a href="https://microblog.ayamikheev.ru/">Микроблога</a></p>
